test/src/e2e_vm_tests/test_programs/should_fail/ref_mut_contract_abi/src/main.sw
contract;

abi MyAbi {
    fn foo(ref mut x: u64);
}

impl MyAbi for Contract {
    fn foo(ref mut x: u64) {

    }
}
